# ClockPendelumAnalyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hardware_bestellung
arbeitsjournal/: Arbeitsjournal.tex  ArbeitsjournalDaniel.tex  Arbeitsjournal_Daniel.tex  Arbeitsjournal_Tobias.tex  RapportDaniel.tex  RapportTobias.tex
docs/: .gitignore  Projektdokumentation_ClockPendulumAnalyzer.tex  ausblick.tex  bibliography.bib  fazit.tex  introduction.tex  management_summary.tex  pageformatting.sty  redlichkeit.tex
docs/pmp/: PMP_ClockPendelumAnalyzer.tex  PMP_ClockPendulumAnalyzer.tex  PMP_ClockPenedlumAnalyzer.tex  integrationtests.tex  introduction.tex  projekt_organisation.tex  projekt_rahmenplan.tex  projekt_unterstutzung.tex  risiko.tex  sprintplanning.tex  systemtests.tex  testing.tex  zeitplanung.tex
docs/sysspec/: Statistics.R  SysSpec_ClockPendelumAnalyzer.tex  SysSpec_ClockPendulumAnalyzer.tex  SysSpec_ClockPenedlumAnalyzer.aux  SysSpec_ClockPenedlumAnalyzer.out  SysSpec_ClockPenedlumAnalyzer.toc  datapersistenz.tex  hardware.tex  interfaces.tex  introduction.tex  klassendiagramm.tex  raspberry.tex  (+9 more)
presentation/: ClockPendulumAnalyzer.nav  ClockPendulumAnalyzer.tex  ausblick_presentation.tex  custom.sty  hardware_presentation.tex  lessons_presentation.tex  overview_presentation.tex  pageformatting.sty  raspberry_presentation.tex  sources.tex
src/: GPIO.cpp  GPIOFileWriter.cpp  mainTest.cpp
tiny_K20_source/: .cproject  .project  ProcessorExpert.pe
webclient/: functions.js  index.html  jquery-ui.css  jquery-ui.min.css  jquery-ui.min.js  style.css
(+42 files in other folders)
